<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_invoice"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/nav_invoice" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_local_cafe_black_24dp"
            android:title="@string/nav_order" />
        <item
            android:id="@+id/nav_invoice_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/nav_invoice_history" />
    </group>

    <item android:title="@string/title_menu_data">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_directions_run_black_24dp"
                    android:title="@string/nav_logout" />
                <item
                    android:id="@+id/nav_server_logout"
                    android:icon="@drawable/ic_create_black_24dp"
                    android:title="@string/nav_server_logout" />
            </group>
        </menu>
    </item>

</menu>
