<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_invoice">

    <fragment
        android:id="@+id/nav_invoice"
        android:name="com.example.proyecto.view.navigation.InvoiceFragment"
        android:label="@string/nav_invoice"
        tools:layout="@layout/fragment_invoice" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.proyecto.view.navigation.OrderFragment"
        android:label="@string/nav_order"
        tools:layout="@layout/fragment_order"/>

    <fragment
        android:id="@+id/nav_invoice_history"
        android:name="com.example.proyecto.view.navigation.InvoiceHistoryFragment"
        android:label="@string/nav_invoice_history"
        tools:layout="@layout/fragment_invoice_history"/>

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.proyecto.view.navigation.Logout" />

    <fragment
        android:id="@+id/nav_server_logout"
        android:name="com.example.proyecto.view.navigation.ServerLogout" />

</navigation>