<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mcdUndeliveredOrder"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/defaultMargin"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/colorCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/defaultMargin">


        <TextView
            android:id="@+id/tvInvoice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:gravity="center"
            android:text="@string/tvInvoice"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvOpenTime"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOpenTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:gravity="center"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/tvTable"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInvoice" />

        <TextView
            android:id="@+id/tvTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:text="@string/tvTable"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@id/tvTotal"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOpenTime" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:text="@string/tvTotal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTable" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btAddOrder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/defaultMargin"
            android:text="@string/btAddOrder"
            app:layout_constraintBottom_toTopOf="@id/btCloseInvoice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btCloseInvoice"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/defaultMargin"
            android:text="@string/btCloseInvoice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/btAddOrder" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>