<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mcdUndeliveredOrder"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/defaultMargin"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/colorCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/defaultMargin">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="@dimen/undelivered_order_image_size"
            android:layout_height="@dimen/undelivered_order_image_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_default_product"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvOrderNum"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/defaultMargin"
            android:text="@string/tvOrderNum"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvProductTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivProduct"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvProductTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:text="@string/tvProductTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@+id/tvOrderUnits"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivProduct"
            app:layout_constraintTop_toBottomOf="@+id/tvOrderNum" />

        <TextView
            android:id="@+id/tvOrderUnits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:text="@string/tvOrderUnits"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@+id/tvOrderInvoice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivProduct"
            app:layout_constraintTop_toBottomOf="@+id/tvProductTitle" />

        <TextView
            android:id="@+id/tvOrderInvoice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/tvOrderInvoice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivProduct"
            app:layout_constraintTop_toBottomOf="@+id/tvOrderUnits" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>