<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ConnectionActivity">

    <ImageView
        android:id="@+id/ivLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/restaurant_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/largeMargin"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tvConnection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvConnection"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilServer"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilServer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginBottom="@dimen/defaultMargin"
            android:hint="@string/tilServer"
            app:layout_constraintBottom_toTopOf="@id/cbRememberConnection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvConnection">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbRememberConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/cbRememberConnection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilServer"
            app:layout_constraintBottom_toTopOf="@id/btConnect"/>

        <Button
            android:id="@+id/btConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btConnect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbRememberConnection"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>