<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.AddOrderActivity"
    tools:showIn="@layout/activity_add_order">

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <TextView
            android:id="@+id/tvProductsNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_marginBottom="@dimen/defaultMargin"
            android:text="@string/tvNoData"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProducts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginBottom="@dimen/defaultMargin"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:text="@string/tvTitleProductName"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/rvOrders"
            app:layout_constraintEnd_toStartOf="@+id/tvTitleUnits"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <TextView
            android:id="@+id/tvTitleUnits"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/tvTitleUnits"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvTitleProductName"
            app:layout_constraintEnd_toStartOf="@+id/tvTitlePrice"
            app:layout_constraintStart_toEndOf="@id/tvTitleProductName"
            app:layout_constraintTop_toTopOf="@id/tvTitleProductName" />

        <TextView
            android:id="@+id/tvTitlePrice"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:gravity="end"
            android:text="@string/tvTitlePrice"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvTitleProductName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTitleUnits"
            app:layout_constraintTop_toTopOf="@id/tvTitleProductName" />

        <TextView
            android:id="@+id/tvOrdersNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultMargin"
            android:text="@string/tvNoData"
            app:layout_constraintBottom_toTopOf="@id/tvTotalOrderPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleProductName" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOrders"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/defaultMargin"
            app:layout_constraintBottom_toTopOf="@id/tvTotalOrderPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleProductName" />

        <TextView
            android:id="@+id/tvTotalOrderPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:gravity="end"
            android:text="@string/tvTotalOrderPrice"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btAddOrders"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvOrders" />

        <Button
            android:id="@+id/btAddOrders"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_marginBottom="@dimen/defaultMargin"
            android:text="@string/btAddOrders"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTotalOrderPrice" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>